RESOLVED FIXED284523
Fix missing includes and guards when certain features are disabled
https://bugs.webkit.org/show_bug.cgi?id=284523
Summary Fix missing includes and guards when certain features are disabled
Simon Pena
Reported 2024-12-12 04:52:12 PST
I am experimenting with disabling certain, long standing features such as VIDEO, AUDIO, WEB_CODECS and a few other things. As these are likely enabled by default for most ports, the build hadn't been exercised in a while and was failing. A PR fixing it should arrive soon.
Attachments
Simon Pena
Comment 1 2024-12-13 07:25:04 PST
Radar WebKit Bug Importer
Comment 2 2024-12-19 04:53:14 PST
EWS
Comment 3 2025-01-07 05:49:09 PST
Committed 288522@main (951a118e17cd): <https://commits.webkit.org/288522@main> Reviewed commits have been landed. Closing PR #37909 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.