Fix missing includes and guards when certain features are disabled https://bugs.webkit.org/show_bug.cgi?id=284523

Reviewed by NOBODY (OOPS!).

When disabling long-standing features such as VIDEO, AUDIO, WEB_CODECS
and others, WebKit failed to build as some of the symbols were not
properly guarded, or includes were missing (probably because they were
transitively included otherwise).

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::privateBrowsingStateDidChange): Missing UNUSED_PARAM
when VIDEO is not enabled.
* Source/WebCore/loader/LinkLoader.cpp:
(WebCore::LinkLoader::resourceTypeFromAsAttribute): TextTrackResource
can't be returned with VIDEO not enabled.
(WebCore::createLinkPreloadResourceClient): Skip TextTrackResource with
VIDEO not enabled.
(WebCore::LinkLoader::isSupportedType): ditto.
* Source/WebCore/loader/SubresourceLoader.cpp:
(WebCore::logResourceLoaded): ditto.
* Source/WebCore/loader/cache/CachedResource.h: ditto.
* Source/WebCore/loader/cache/CachedResourceLoader.cpp:
(WebCore::createResource): ditto.
* Source/WebCore/loader/cache/CachedResourceLoader.h: Do not expose
  CachedTextTrack if VIDEO is not enabled.
* Source/WebCore/loader/cache/CachedTextTrack.cpp: Do not expose if
  VIDEO is not enabled.
* Source/WebCore/loader/cache/CachedTextTrack.h: Do not expose if VIDEO
  is not enabled.
* Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::endInterruption): Missing
UNUSED_PARAM when VIDEO is not enabled.
(WebCore::PlatformMediaSessionManager::addSession): Protect
Session-specific members when VIDEO and AUDIO are not enabled.
(WebCore::PlatformMediaSessionManager::removeSession): ditto.
(WebCore::PlatformMediaSessionManager::sessionWillEndPlayback): ditto.
(WebCore::PlatformMediaSessionManager::setCurrentSession): ditto.
(WebCore::PlatformMediaSessionManager::applicationWillBecomeInactive):
ditto.
(WebCore::PlatformMediaSessionManager::applicationDidBecomeActive):
ditto.
(WebCore::PlatformMediaSessionManager::applicationDidEnterBackground):
ditto.
(WebCore::PlatformMediaSessionManager::applicationWillEnterForeground):
ditto.
(WebCore::PlatformMediaSessionManager::processWillSuspend): ditto.
(WebCore::PlatformMediaSessionManager::processDidResume): ditto.
(WebCore::PlatformMediaSessionManager::processDidReceiveRemoteControlCommand): ditto.
(WebCore::PlatformMediaSessionManager::processSystemWillSleep): ditto.
(WebCore::PlatformMediaSessionManager::processSystemDidWake): ditto.
(WebCore::PlatformMediaSessionManager::stopAllMediaPlaybackForProcess):
ditto.
(WebCore::PlatformMediaSessionManager::suspendAllMediaPlaybackForGroup):
ditto.
(WebCore::PlatformMediaSessionManager::resumeAllMediaPlaybackForGroup):
ditto.
(WebCore::PlatformMediaSessionManager::bestEligibleSessionForRemoteControls): ditto.
(WebCore::PlatformMediaSessionManager::hasActiveNowPlayingSessionInGroup): ditto.
(WebCore::PlatformMediaSessionManager::dumpSessionStates): ditto.
* Source/WebCore/platform/audio/PlatformRawAudioData.cpp: Do not expose
  if WEB_CODECS are not enabled.
* Source/WebCore/platform/audio/PlatformRawAudioData.h: ditto.
* Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU): **UNSURE**
renderBufferFormat not available if DRM not enabled.
* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp: **UNSURE**
  ViewSaveAsyncData not used when MHTML not enabled.
* Source/WebKit/UIProcess/Automation/libwpe/WebAutomationSessionWPE.cpp:
  Do not expose unused methods when WebDriver's Mouse, Wheel or Touch
interactions are disabled.
* Source/WebKit/UIProcess/wpe/WebContextMenuProxyWPE.h: Do not expose
  when CONTEXT_MENUS is not enabled.
* Source/WebKit/WebProcess/GPU/ShapeDetection/RemoteBarcodeDetectorProxy.h:
  Moved the guard after the type is defined
* Source/WebKit/WebProcess/GPU/ShapeDetection/RemoteFaceDetectorProxy.h:
  ditto.
* Source/WebKit/WebProcess/GPU/ShapeDetection/RemoteTextDetectorProxy.h:
  ditto.
* Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::maximumBufferingTime): Do not expose TextTrackResource if VIDEO
is not enabled.
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp: Missing FrameLoader
  include.
* Source/WebKit/WebProcess/WebPage/WebPage.h: Missing RegistrableDomain
  include.